stickman epub update, some pages added I stil need to write a text

--- a/public/epub_content/stickman/EPUB/02.xhtml
+++ b/public/epub_content/stickman/EPUB/02.xhtml
@@ -37,7 +37,8 @@
    <div id="panelTop"></div><div id="panelRight"></div><div id="panelBottom"></div><div id="panelLeft"></div>
    <div id="container" class="container">
 		<ul id="scene" class="scene">
-			<li class="layer" data-depth="0.00"><img src="img/02/02.png" /></li>
+			<li class="layer" data-depth="0.60"><img src="img/02/z2.png" /></li>
+			<li class="layer" data-depth="0.20"><img src="img/02/z1.png" /></li>
 		</ul>
 	</div>
 </body>
