--- a/public/epub_content/stickman/EPUB/05.xhtml
+++ b/public/epub_content/stickman/EPUB/05.xhtml
@@ -37,10 +37,7 @@
    <div id="panelTop"></div><div id="panelRight"></div><div id="panelBottom"></div><div id="panelLeft"></div>
    <div id="container" class="container">
 		<ul id="scene" class="scene">
-			<li class="layer" data-depth="0.80"><img src="img/stickman_p03_bottom_z3.png" /></li>
-			<li class="layer" data-depth="0.50"><img src="img/stickman_p03_bottom_z2.png" /></li>
-			<li class="layer" data-depth="0.20"><img src="img/stickman_p03_bottom_z1.gif" /></li>
-			<li class="layer" data-depth="0.00"><img src="img/stickman_p03_bottom_z0.png" /></li>
+			<li class="layer" data-depth="0.20"><img src="img/05/z2.jpg" /></li>
 		</ul>
 	</div>
 </body>
