--- a/public/epub_content/stickman/EPUB/07.xhtml
+++ b/public/epub_content/stickman/EPUB/07.xhtml
@@ -36,10 +36,8 @@
    <script type="text/javascript" src="scripts/parallax.js"></script>
    <div id="container" class="container">
 		<ul id="scene" class="scene">
-			<li class="layer" data-depth="0.80"><img src="img/stickman_p03_bottom_z3.png" /></li>
-			<li class="layer" data-depth="0.50"><img src="img/stickman_p03_bottom_z2.png" /></li>
-			<li class="layer" data-depth="0.20"><img src="img/stickman_p03_bottom_z1.gif" /></li>
-			<li class="layer" data-depth="0.00"><img src="img/stickman_p03_bottom_z0.png" /></li>
+			<li class="layer" data-depth="0.80"><img src="img/07/z3.png" /></li>
+			<li class="layer" data-depth="0.50"><img src="img/07/z2.png" /></li>
 		</ul>
 	</div>
 </body>
