--- a/public/epub_content/stickman/EPUB/11.xhtml
+++ b/public/epub_content/stickman/EPUB/11.xhtml
@@ -3,53 +3,44 @@
 	xmlns:epub="http://www.idpf.org/2007/ops">
 <head>
   <meta charset="utf-8" />
-  <link rel="stylesheet" href="styles/jquery.mobile-git.min.css" />
-  <script src="scripts/jquery-1.10.2.min.js"></script>
-  <script src="scripts/jquery.mobile-git.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Stickman | case 11</title>
+  <title>Stickman | panel 11</title>
+  <link rel="stylesheet" href="styles/jquery.mobile-git.min.css" />
+  <script type="text/javascript" src="scripts/jquery-1.10.2.min.js"></script>
+  <script type="text/javascript" src="scripts/jquery.mobile-git.min.js"></script>
+  <script type="text/javascript">
+		// <![CDATA[
+   			$(document).ready (function () {
+				var scene = document.getElementById('scene');
+				var parallax = new Parallax(scene);
+
+				$(window).on("orientationchange", function( event ) {
+				  if(event.orientation == "portrait"){
+					document.location.href = "text.xhtml";
+				  }
+				});
+
+			});
+   		// ]]>
+  </script>
+	<!-- Behavioral Meta Data -->
+	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+
+	<!-- Styles -->
+	<link rel="stylesheet" type="text/css" href="styles/styles.css" />
+
 </head>
 <body>
- 
-<!-- <h1 id="orientation">orientationchange Not Supported on this Device.</h1> -->
-
-   <div id="img2">
-   		<div><img src="img/04.png" /></div>
-   </div>
-
-
-      <script>
-
-    <![CDATA[
-
-    // $pos = 'landscape';
-    // $curImg = 0;
-
-    // for($i=0; $i<13;$i++){
-    //   $('#img' + $i).hide();
-    // }
-
-    $( window ).on( "orientationchange", function( event ) {
-
-      if(event.orientation == "portrait"){
-        // changeImg();       
-        document.location.href = "index.xhtml";
-
-      }
-      //else{
-        //changeImg();
-      //}
-    });
-    $( window ).orientationchange();
-
-    // function changeImg(){
-    //   $curImg++;
-    //   $('#img' + $curImg-1).hide();
-    //   $('#img' + $curImg).show();
-    // }
-
-    ]]>
-
-  </script>
+	<!-- <h1 id="orientation">orientationchange Not Supported on this Device.</h1> -->
+   <script type="text/javascript" src="scripts/parallax.js"></script>
+   <div id="container" class="container">
+		<ul id="scene" class="scene">
+			<li class="layer" data-depth="0.80"><img src="img/stickman_p03_bottom_z3.png" /></li>
+			<li class="layer" data-depth="0.50"><img src="img/stickman_p03_bottom_z2.png" /></li>
+			<li class="layer" data-depth="0.20"><img src="img/stickman_p03_bottom_z1.gif" /></li>
+			<li class="layer" data-depth="0.00"><img src="img/stickman_p03_bottom_z0.png" /></li>
+		</ul>
+	</div>
 </body>
 </html>
