--- a/public/index.html
+++ b/public/index.html
@@ -113,26 +113,31 @@
 
 			// FRIEND LOST !
 			if (parseInt(elem.style.width) <= 0){
-				playFBCrossAnim();
-				if (friends.length > 1){
+				displayLostFriend();
+				if (friends.length > 0){
+					document.getElementById("friendMeter-cross").style.backgroundImage = "url(../images/FBCross_small.gif)";
+
+					setTimeout(function(){
+						setFriendMeterCounterHTML();
+					}, 1000);
+
+					setTimeout(function(){
+						document.getElementById("friendMeter-cross").style.backgroundImage = "url(../images/FBCross.png)"
+					}, 2500);
 					elem.style.width = "98%";
+
+				} else if (friends.length == 0){
+					document.getElementById("friendMeter-cross").style.backgroundImage = "url(../images/FBCross_small.gif)";
+
+					setTimeout(function(){
+						setFriendMeterCounterHTML();
+					}, 1000);
+
+					clearInterval(shrinkBarId);
+
 				} else {
 					clearInterval(shrinkBarId);
 				}
-			}
-		}
-
-		function playFBCrossAnim(){
-			document.getElementById("friendMeter-cross").style.backgroundImage = "url(../images/FBCross_small.gif)";
-			setTimeout(function(){
-				displayLostFriend();
-				setFriendMeterCounterHTML();
-			}, 1000);
-			if (friends.length >= 1){
-				console.log("number of remaining friends : "+friends.length);
-				setTimeout(function(){
-					document.getElementById("friendMeter-cross").style.backgroundImage = "url(../images/FBCross.png)"
-				}, 2500);
 			}
 		}
 
