--- a/public/epub_content/JourneytoEpub/EPUB/EpubStory3.xhtml
+++ b/public/epub_content/JourneytoEpub/EPUB/EpubStory3.xhtml
@@ -40,7 +40,7 @@
 		</div>
 		<div>
 		<h2>A little more interactive chapter</h2>
-		<h3>In this chapter, you could test the possiblity to swipe some images.</h3><br />
+		<h3>Caress the screen!</h3><br />
 		</div>
   		<div>
 	<h4>Ten shades of grey !</h4></div>
