--- a/public/epub_content/JourneytoEpub/EPUB/EpubStory4.xhtml
+++ b/public/epub_content/JourneytoEpub/EPUB/EpubStory4.xhtml
@@ -34,10 +34,10 @@
 		</div>
 		<div><h2>This is another chapter of the Epub</h2>
 
-		<h3>It becomes more interactive. Test the orientation of the reader. Will it work. I'm not sure.<br></br>
+		<h3>It becomes more interactive. Test the orientation of the reader<br />
 
   		
- 		 Test what's happening when you look at this text as a landscape or as a portrait. </h3>
+ 		 See what's happening when you look at this text as a landscape or as a portrait. </h3>
 		</div>
   		
 		<p>
