--- a/public/epub_content/JourneytoEpub/EPUB/EpubStory5.xhtml
+++ b/public/epub_content/JourneytoEpub/EPUB/EpubStory5.xhtml
@@ -18,8 +18,7 @@
 	<h1>Un Epub dont vous êtes le testeur</h1>
   	</div>
 	 
-	<h2>This is a test for a script named " Parallax.js ", <br/>created by Matthew Wagerfield</h2>	
-	 
+	<h2>Play with deep depths ! <br/></h2>	
 
 	<div id="container" class="container">
 		<ul id="scene" class="scene">
@@ -39,8 +38,10 @@
 	var scene = document.getElementById('scene');
 	var parallax = new Parallax(scene);
 	</script> 
+	 
+	<p> The parallax effect follows your moves.</p>
 
-	<p> It follows your moves and give a impression of deep depth.</p>
+<p class="legend">	The script has been originaly created by Matthew Wagerfield.</p>
   	<div class="link_footer">
     	<a href="EpubStory3.xhtml">Get somewhere else in the Epub</a><br />
  
