--- a/public/epub_content/JourneytoEpub/EPUB/EpubStory6.xhtml
+++ b/public/epub_content/JourneytoEpub/EPUB/EpubStory6.xhtml
@@ -13,8 +13,8 @@
     <div class="entete">
     <h1>Un Epub dont vous êtes le dessinateur</h1>
     </div>
-	<h2> Get your hands ready!</h2>
-    <h3>This is a test for a painting script.</h3>
+	<h2> Get your hands dirty!<br /> Draw me a dragon !</h2>
+
     <canvas id="canvas" width="500px" height="500px">
     Your browser does not support the HTML 5 Canvas. 
     </canvas>
