--- a/public/epub_content/JourneytoEpub/EPUB/EpubStory2.xhtml
+++ b/public/epub_content/JourneytoEpub/EPUB/EpubStory2.xhtml
@@ -16,17 +16,17 @@
 	
 		<div><img src="Images/capitaine.jpeg" /></div>
 		<p class="legend">Well of course, to read this Ebook, your'e supposed to be comfortable.</p>
-		<div> <img src="Images/layers.gif" width="500px" /></div>
-		<p class="legend"> Thanks to the Epub, you can now go buy yourself new eyes. </p> 
+	<br />	<div> <img src="Images/layers.gif" /></div>
+ 
 
 		
 
 	
-	<video id="Peur_mp4" width="100%" height="100%" controls="controls">
+	<video id="Peur_mp4" controls="controls">
 		<source src="Videos/Peur.webm" type="video/webm"/>
 		<source src="Videos/Peur.mp4" type="video/mp4"/>
 	</video>
-		<h3> If nothing shows up, it's probably because your e-reader doesn't support this new standard. Choose another one, for the moment.</h3>
+
   <div class="link_footer">
     <a href="EpubStory3.xhtml">Continue to explore this Epub</a><br />
     <a href="EpubStory2.xhtml">Get back</a>
