--- a/public/epub_content/JourneytoEpub/EPUB/EpubStory.xhtml
+++ b/public/epub_content/JourneytoEpub/EPUB/EpubStory.xhtml
@@ -16,18 +16,13 @@
 	<div>
 		
 		<h2>Bienvenue ! <br />Vous êtes entrain de lire le premier chapitre du voyage que vous allez entreprendre !</h2>
-  	 <p>Cet Epub vous présente divers exercices et expériences que j'ai testé lors d'un workshop à la HEAD. Il explore divers manières d'interagir avec le texte, interactions rendues possible grâce au format Epub3.<br />Je vous laisse les découvrir. Bon voyage !</p>
+  	 <p>	Explorez diverses possibilités offertes par le nouveau format Epub3 !  Pénetrez dans un monde où votre statut de lecteur se modifie selon vos choix. Un Epub dont vous êtes le héros !
+		<br /> Bon voyage !</p>
 <br />
-	
+</div>
 	 <p> Pour commencer, je vous propose une simple expérience de lecture.</p>
 
-			<div class="english">	
-		<p> English version</p>
-		Welcome ! This is the starting point to your journey into the Epub 3 format ! 
-		 <p>This Epub shows exercices and experiences I've made about various possibilities, from a simple text reader, to more interactive relations bewtween the Ebook and you, the Ereader. <br />I wish you a nice Trip !</p>
-<br />
-	<p>	To begin with, here's a simple text (the brief of our workshop with OSP). </p>   
-</div>	
+	<div>
 	<h4>Self-conscious-layout</h4>
 	    <p style="text-align: justify; font-size: 14px; line-height: 20px; margin: 10px 0px 20px;"> 
 		Within  the issue of 'Responsive Design', we propose to explore the ePub-format (a standard for digital publications / books) and its implications for  media design. Radically different from a traditional book, but much like HTML, an ePub publication adjusts itself to the capabilties of the reading device and the settings of the user. ePub distuinguishes itself in various ways from the other digital format used for digital  publications: PDF (Portable Document Format). PDF and ePub propose a fundamentally different approach towards layout. PDF uses a 'fixed' page / layout, which gives the designer a great amount of control, but leaves less flexibility for the digital object to adapt itself to different (digital) contexts. The ePub format describes the layout (in the spirit of LaTeX and HTML) in a more generous way (flow-based layout), allowing the document to re-adjust itself towards the functionalities and properties of the reading-device.
