--- a/public/epub_content/salpetriere/EPUB/p1.xhtml
+++ b/public/epub_content/salpetriere/EPUB/p1.xhtml
@@ -46,7 +46,7 @@ var text = "1877. Décembre. L'état géné-ral est le même. La sensibilité n'
 		<section epub:type="frontmatter" id="frontmatter">
 			<section epub:type="titlepage" id="titlepage">
 				<div style="text-align:center;">
-					<h3>R... Madeleine</h3>
+					<p style="font-size: 36px;">R... Madeleine</p>
 				</div>
 				<div id="visitsnumber"></div>
 				<p >R... Madeleine, âgée actuel-lement de 51 ans, est entrée à la Salpêtrière, le 27 décembre 1849. Nous l'avons observée, en 1866, dans le service de M.DELASIAUVE et,depuis 1872, dans le service de M. CHARCOT. La malade nous a fourni, sur ses antécédents et sur sa famille, les renseignements qui suivent: Son père est mort d'un accident, alors que sa mère était enceinte d'elle depuis six semaines. Celle-ci aurait éprouvé une vive et doulou-reuse émotion à laquelle on a attribué la paralysie de R...Elle n'avait pas d'attaques de nerfs, mais était sujette à des palpitations cardiaques, à des étouffements. Elle est morte presque subitement. R... n'a ni frères, ni soeurs, et on lui a toujours dit qu'aucun de ses autres parents n'avait eu d'af-fections nerveuses. Elle assure qu'elle est née avec sa para-lysie du côté droit et qu'elle n'a pas eu de maladies graves durant son enfance. 
