Working version of the ePub 'Trapped in the future'

--- a/public/epub_content/clementcoubes/EPUB/nav.xhtml
+++ b/public/epub_content/clementcoubes/EPUB/nav.xhtml
@@ -8,16 +8,8 @@
 	<body>
 		<nav epub:type="toc" id="toc">			
 			<ol>
-				<li><a href="content.xhtml#ch1">I. Welcome</a></li>
+				<li><a href="content.xhtml">Trapped in the future</a></li>
 			</ol>			
-		</nav>
-		<nav epub:type="landmarks">
-			<ol>
-				<li><a epub:type="frontmatter" href="content.xhtml#frontmatter"
-						>frontmatter</a></li>
-				<li><a epub:type="bodymatter" href="content.xhtml#bodymatter"
-						>bodymatter</a></li>
-			</ol>
 		</nav>
 	</body>
 </html>
